# pycharcounts-cz

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycharcounts_cz/: __init__.py  output.py  pycharcounts_cz.py
tests/: Can We Touch Your Hair.txt  test_pycharcounts_cz.py
