[tool.poetry]
name = "pycharcounts_cz"
version = "0.1.0"
description = "Calculate the number of characters in a text filee."
authors = ["Celeste Zhao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
